# serializer version: 1
# name: test_fetch_snapshot_or_error_by_active_pipeline_name_not_found[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineNotFoundError"
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_active_pipeline_name_success[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshot",
      "dagsterTypes": [
        {
          "key": "Any"
        },
        {
          "key": "Bool"
        },
        {
          "key": "Float"
        },
        {
          "key": "Int"
        },
        {
          "key": "Nothing"
        },
        {
          "key": "String"
        }
      ],
      "description": null,
      "modes": [
        {
          "name": "default"
        }
      ],
      "name": "tagged_job",
      "pipelineSnapshotId": "c3320c44d5fa6c508dfda564e67bc67747b9891c",
      "runTags": [
        {
          "key": "baz",
          "value": "quux"
        }
      ],
      "solidHandles": [
        {
          "handleID": "simple_op"
        }
      ],
      "solids": [
        {
          "name": "simple_op"
        }
      ],
      "tags": [
        {
          "key": "foo",
          "value": "bar"
        }
      ]
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_snapshot_id_snapshot_not_found[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshotNotFoundError",
      "snapshotId": "notthere"
    }
  }
  '''
# ---
# name: test_fetch_snapshot_or_error_by_snapshot_id_success[0]
  '''
  {
    "pipelineSnapshotOrError": {
      "__typename": "PipelineSnapshot",
      "dagsterTypes": [
        {
          "key": "Any"
        },
        {
          "key": "Bool"
        },
        {
          "key": "Float"
        },
        {
          "key": "Int"
        },
        {
          "key": "Nothing"
        },
        {
          "key": "String"
        }
      ],
      "description": null,
      "modes": [
        {
          "name": "default"
        }
      ],
      "name": "noop_job",
      "pipelineSnapshotId": "dbc0d71fefa48d56ff94e517235980f1bbf0d8e8",
      "runTags": [],
      "solidHandles": [
        {
          "handleID": "noop_op"
        }
      ],
      "solids": [
        {
          "name": "noop_op"
        }
      ],
      "tags": []
    }
  }
  '''
# ---
